--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- </head>
- <body>
-<h1>Hi </h1>
+</head>
+<style>
+    .container {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 620px;
+        background-color: rgb(85, 130, 169);
+        color: rgb(32, 176, 233);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+
+    }
+    button{
+        padding: 8px 14px;
+        background-color: rgb(222, 212, 11);
+        color: #333;
+        border: none;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 2px;
+    }
+</style>
+
+<body style="background-color: #151414;">f
+    <h1 style="color: #ffffff; font-size: 2rem; text-align: center;">Redux and redux toolkit</h1>
+
+    <div class="container">
+        <button class="increment_bnt">Increment</button>
+        <h2 class="count_text" style="font-size: xx-large; color: white;">0</h2>
+        <button class="decrement_btn">Decrement</button>
+    </div>
+
+    <script type="module" src="script.js"></script>
 </body>
- </html>
+
+</html>
