--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         gap: 20px;
 
     }
-    button{
+
+    button {
         padding: 8px 14px;
         background-color: rgb(222, 212, 11);
         color: #333;
@@ -33,13 +34,14 @@
 <body style="background-color: #151414;">f
     <h1 style="color: #ffffff; font-size: 2rem; text-align: center;">Redux and redux toolkit</h1>
 
-    <div class="container">
+    <!-- <div class="container">
         <button class="increment_bnt">Increment</button>
         <h2 class="count_text" style="font-size: xx-large; color: white;">0</h2>
         <button class="decrement_btn">Decrement</button>
-    </div>
+    </div> -->
 
-    <script type="module" src="script.js"></script>
+    <!-- <script type="module" src="script.js"></script> -->
+    <script type="module" src="script2.js"></script>
 </body>
 
 </html>
